re PR libstdc++/19322 (std::isnan<>() is broken on FreeBSD)

2005-01-16  Lorenz Minder  <lminder@gmx.net>
	    Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/19322
	* include/c_std/std_cmath.h: Define the C99 classification facilities
	directly inside namespace std:.
	* testsuite/26_numerics/cmath/19322.cc: New.

Co-Authored-By: Paolo Carlini <pcarlini@suse.de>

From-SVN: r93723